--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "element-ui": "^2.2.0",
     "vue": "^2.5.2",
+    "vue-pdf": "^3.2.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
