<fix>:<add jquery to fix animate scrolling>

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "element-ui": "^2.2.0",
     "vue": "^2.5.2",
     "vue-pdf": "^3.2.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "jquery": "^2.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.6",
