--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "echarts": "^4.0.4",
     "element-ui": "^2.2.0",
+    "fileloader": "^2.0.0",
     "jquery": "^2.2.3",
     "vue": "^2.5.2",
     "vue-pdf": "^3.2.2",
@@ -41,7 +42,7 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.9",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.4.2",
